# wgpu_poc

./: .gitignore  .rustc_info.json  Cargo.toml  build.rs  build.sh
.cargo/: config.toml
assets/shaders/: instancing.wgsl
src/: components.rs  lib.rs  main.rs  main_loop.rs
src/components/: cs_io.rs
src/components/cs_io/: file_asset_io.rs  loading_state.rs  wasm_asset_io.rs
src/components/cs_render/: mod.rs  render_loop.rs  shader.rs  world_render_pipline.rs
src/components/cs_render/shader/: camera_binding.rs  compute_shader_binding.rs  texture_sampler_binding.rs
src/components/cs_render/shader_types/: camera_uniform.rs  compute_params_uniform.rs  geometry.rs  mod.rs  texture.rs  tile_instance.rs
src/components/cs_util/: camera.rs  cs_window.rs  fps_counter.rs  input.rs  mod.rs
src/components/cs_world/: map.rs  update_loop.rs
